--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -68,7 +68,58 @@
   "about": {
     "title": "За DoqiSHPK",
     "subtitle": "Дознајте повеќе за нашата компанија и мисија",
-    "description": "DoqiSHPK е посветена на обезбедување исклучителни решенија за мебел и душеци кои ја подобруваат удобноста и стилот на вашите животни простори."
+    "description": "DoqiSHPK е посветена на обезбедување исклучителни решенија за мебел и душеци кои ја подобруваат удобноста и стилот на вашите животни простори",
+    "hero": {
+      "title": "За DoqiSHPK",
+      "subtitle": "Креирање на Извонредност во Мебел и Душеци од Нашето Основање"
+    },
+    "mission": {
+      "title": "Наша Мисија",
+      "description": "Да обезбедуваме исклучителни решенија за мебел и душеци кои ги трансформираат животните простори во рајови на удобност, стил и функционалност. Посветени сме на испорака на производи кои ги надминуваат очекувањата додека ги одржуваме највисоките стандарди на квалитет и занаетчиство."
+    },
+    "vision": {
+      "title": "Наша Визија",
+      "description": "Да бидеме водечки производител на мебел и душеци во регионот, препознаени по иновација, квалитет и задоволство на клиентите. Замислуваме иднина во која секој дом е збогатен со нашите внимателно дизајнирани и експертно изработени производи."
+    },
+    "story": {
+      "title": "Наша Приказна",
+      "description": "DoqiSHPK започна со едноставна визија: да создава мебел и душеци кои комбинираат удобност, издржливост и естетска привлечност. Преку години на посветеност и континуирана иновација, се воспоставивме како доверливо име во индустријата. Нашето партнерство со StarFlex ни овозможи да ја искористиме најнапредната технологија и да ја прошируваме нашата понуда на производи за да ги задоволиме различните потреби на клиентите."
+    },
+    "values": {
+      "title": "Наши Вредности",
+      "quality": {
+        "title": "Квалитет на Прво Место",
+        "description": "Никогаш не правиме компромис со квалитетот, користејќи само најдобри материјали и применувајќи ригорозни процеси на контрола на квалитетот."
+      },
+      "innovation": {
+        "title": "Иновација",
+        "description": "Континуирано инвестираме во нови технологии и дизајн пристапи за да останеме пред индустриските трендови."
+      },
+      "customer": {
+        "title": "Фокус на Клиент",
+        "description": "Нашите клиенти се во срцето на сè што правиме. Слушаме, разбираме и испорачуваме решенија кои ги надминуваат очекувањата."
+      },
+      "sustainability": {
+        "title": "Одржливост",
+        "description": "Посветени сме на еколошки одговорни практики во нашите производни процеси и набавка на материјали."
+      }
+    },
+    "factory": {
+      "title": "Модерно Производство",
+      "description": "Нашиот модерен производен погон е опремен со напредни машини и технологија, овозможувајќи ни да одржуваме постојан квалитет додека ја задоволуваме растечката побарувачка. Ја комбинираме традиционалната занаетчија со модерните производни техники за да создадеме производи кои издржуваат на тестот на времето."
+    },
+    "team": {
+      "title": "Наш Експертски Тим",
+      "description": "Зад секој производ на DoqiSHPK стои тим на вешти занаетчии, дизајнери и специјалисти за квалитет кои делат страст кон извонредност. Нашите искусни професионалци носат децении комбинирано искуство за да обезбедат дека секој производ ги исполнува нашите строги стандарди."
+    },
+    "commitment": {
+      "title": "Наша Посветеност кон Вас",
+      "description": "Посветени сме на обезбедување не само производи, туку целосни решенија кои го подобруваат вашето животно искуство. Од почетните дизајн концепти до конечната испорака, обезбедуваме дека секој аспект на нашата услуга ја одразува нашата посветеност кон извонредност и задоволство на клиентите."
+    },
+    "partners": {
+      "title": "Наши Доверливи Партнери",
+      "subtitle": "Соработуваме со водечки компании во индустријата за да обезбедиме исклучителен квалитет и иновација"
+    }
   },
   "contact": {
     "title": "Контактирајте не",
