--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -68,7 +68,58 @@
   "about": {
     "title": "О DoqiSHPK",
     "subtitle": "Сазнајте више о нашој компанији и мисији",
-    "description": "DoqiSHPK је посвећена испоруци изузетних решења намештаја и душека која побољшавају удобност и стил ваших животних простора."
+    "description": "DoqiSHPK је посвећена испоруци изузетних решења намештаја и душека која побољшавају удобност и стил ваших животних простора",
+    "hero": {
+      "title": "О DoqiSHPK",
+      "subtitle": "Стварање Изврсности у Намештају и Душецима Од Нашег Оснивања"
+    },
+    "mission": {
+      "title": "Наша Мисија",
+      "description": "Пружити изузетна решења намештаја и душека која трансформишу животне просторе у уточишта удобности, стила и функционалности. Посвећени смо испоруци производа који премашују очекивања уз одржавање највиших стандарда квалитета и заната."
+    },
+    "vision": {
+      "title": "Наша Визија",
+      "description": "Бити водећи произвођач намештаја и душека у региону, препознат по иновацији, квалитету и задовољству купаца. Замишљамо будућност у којој је сваки дом обогаћен нашим пажљиво дизајнираним и стручно израђеним производима."
+    },
+    "story": {
+      "title": "Наша Прича",
+      "description": "DoqiSHPK је започео са једноставном визијом: креирати намештај и душеке који комбинују удобност, трајност и естетску привлачност. Кроз године посвећености и континуиране иновације, etablирали смо се као поуздано име у индустрији. Наше партнерство са StarFlex омогућило нам је коришћење најновије технологије и проширење наше понуде производа како бисмо задовољили различите потребе купаца."
+    },
+    "values": {
+      "title": "Наше Вредности",
+      "quality": {
+        "title": "Квалитет на Првом Месту",
+        "description": "Никада не правимо компромисе по питању квалитета, користећи само најфиније материјале и примењујући ригорозне процесе контроле квалитета."
+      },
+      "innovation": {
+        "title": "Иновација",
+        "description": "Континуирано улажемо у нове технологије и дизајнерске приступе како бисмо остали испред индустријских трендова."
+      },
+      "customer": {
+        "title": "Фокус на Купца",
+        "description": "Наши купци су у срцу свега што радимо. Слушамо, разумемо и испоручујемо решења која премашују очекивања."
+      },
+      "sustainability": {
+        "title": "Одрживост",
+        "description": "Посвећени смо еколошки одговорним праксама у нашим производним процесима и набавци материјала."
+      }
+    },
+    "factory": {
+      "title": "Најсавременија Производња",
+      "description": "Наш модерни производни погон опремљен је напредним машинама и технологијом, омогућавајући нам одржавање доследног квалитета док задовољавамо растућу потражњу. Комбинујемо традиционални занат са модерним производним техникама како бисмо креирали производе који издржавају тест времена."
+    },
+    "team": {
+      "title": "Наш Стручни Тим",
+      "description": "Иза сваког DoqiSHPK производа стоји тим вештих занатлија, дизајнера и стручњака за квалитет који деле страст према изврсности. Наши искусни професионалци уносе деценије комбинованог искуства како би осигурали да сваки производ испуњава наше строге стандарде."
+    },
+    "commitment": {
+      "title": "Наша Посвећеност Вама",
+      "description": "Посвећени смо пружању не само производа, већ комплетних решења која побољшавају ваше животно искуство. Од почетних дизајнерских концепата до коначне испоруке, осигуравамо да сваки аспект наше услуге одражава нашу посвећеност изврсности и задовољству купаца."
+    },
+    "partners": {
+      "title": "Наши Поуздани Партнери",
+      "subtitle": "Сарађујемо са водећим компанијама у индустрији како бисмо пружили изузетан квалитет и иновацију"
+    }
   },
   "contact": {
     "title": "Контактирајте нас",
