--- a/public/locales/hr/translation.json
+++ b/public/locales/hr/translation.json
@@ -68,7 +68,58 @@
   "about": {
     "title": "O DoqiSHPK",
     "subtitle": "Saznajte više o našoj tvrtki i misiji",
-    "description": "DoqiSHPK je predana pružanju iznimnih rješenja namještaja i madracea koja poboljšavaju udobnost i stil vaših životnih prostora."
+    "description": "DoqiSHPK je predana pružanju iznimnih rješenja namještaja i madracea koja poboljšavaju udobnost i stil vaših životnih prostora",
+    "hero": {
+      "title": "O DoqiSHPK",
+      "subtitle": "Stvaranje Izvrsnosti u Namještaju i Madracijima Od Našeg Osnivanja"
+    },
+    "mission": {
+      "title": "Naša Misija",
+      "description": "Pružiti iznimna rješenja namještaja i madracea koja transformiraju životne prostore u utočišta udobnosti, stila i funkcionalnosti. Predani smo pružanju proizvoda koji nadmašuju očekivanja uz održavanje najviših standarda kvalitete i zanata."
+    },
+    "vision": {
+      "title": "Naša Vizija",
+      "description": "Biti vodeći proizvođač namještaja i madracea u regiji, prepoznat po inovaciji, kvaliteti i zadovoljstvu kupaca. Zamišljamo budućnost u kojoj je svaki dom obogaćen našim pažljivo dizajniranim i stručno izrađenim proizvodima."
+    },
+    "story": {
+      "title": "Naša Priča",
+      "description": "DoqiSHPK je započeo s jednostavnom vizijom: stvoriti namještaj i madrace koji kombiniraju udobnost, trajnost i estetsku privlačnost. Kroz godine predanosti i kontinuirane inovacije, etablirali smo se kao pouzdano ime u industriji. Naše partnerstvo sa StarFlex omogućilo nam je korištenje najnovije tehnologije i proširenje naše ponude proizvoda kako bismo zadovoljili raznolike potrebe kupaca."
+    },
+    "values": {
+      "title": "Naše Vrijednosti",
+      "quality": {
+        "title": "Kvaliteta na Prvom Mjestu",
+        "description": "Nikada ne pravimo kompromise po pitanju kvalitete, koristeći samo najfinije materijale i primjenjujući rigorozne procese kontrole kvalitete."
+      },
+      "innovation": {
+        "title": "Inovacija",
+        "description": "Kontinuirano ulažemo u nove tehnologije i dizajnerske pristupe kako bismo ostali ispred industrijskih trendova."
+      },
+      "customer": {
+        "title": "Fokus na Kupca",
+        "description": "Naši kupci su u srcu svega što radimo. Slušamo, razumijemo i pružamo rješenja koja nadmašuju očekivanja."
+      },
+      "sustainability": {
+        "title": "Održivost",
+        "description": "Predani smo ekološki odgovornim praksama u našim proizvodnim procesima i nabavi materijala."
+      }
+    },
+    "factory": {
+      "title": "Najsuvremenija Proizvodnja",
+      "description": "Naš moderni proizvodni pogon opremljen je naprednim strojevima i tehnologijom, omogućavajući nam održavanje dosljedne kvalitete dok zadovoljavamo rastuću potražnju. Kombiniramo tradicionalni zanat s modernim proizvodnim tehnikama kako bismo stvorili proizvode koji izdržavaju test vremena."
+    },
+    "team": {
+      "title": "Naš Stručni Tim",
+      "description": "Iza svakog DoqiSHPK proizvoda stoji tim vještih zanatlija, dizajnera i stručnjaka za kvalitetu koji dijele strast prema izvrsnosti. Naši iskusni profesionalci unose desetljeća kombiniranog iskustva kako bi osigurali da svaki proizvod ispunjava naše stroge standarde."
+    },
+    "commitment": {
+      "title": "Naša Predanost Vama",
+      "description": "Predani smo pružanju ne samo proizvoda, već kompletnih rješenja koja poboljšavaju vaše životno iskustvo. Od početnih dizajnerskih koncepata do konačne isporuke, osiguravamo da svaki aspekt naše usluge odražava našu predanost izvrsnosti i zadovoljstvu kupaca."
+    },
+    "partners": {
+      "title": "Naši Pouzdani Partneri",
+      "subtitle": "Surađujemo s vodećim tvrtkama u industriji kako bismo pružili iznimnu kvalitetu i inovaciju"
+    }
   },
   "contact": {
     "title": "Kontaktirajte nas",
